_sass/_base.scss
/*
    PAGE LAYOUT
*/
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.site-content {
    flex: 1;
    max-width: $content-max-width;
    padding: 0 $content-padding;
    margin: 0 auto;
}

.site-header .wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    max-width: $header-max-width;
    padding: 0 $content-padding;
    margin: 0 auto;
    line-height: $header-height;
}


/*
    GENERAL
*/
h1,
h2, 
h3, 
h4 {
    margin: 2rem 0 1rem 0;
}

p {
    margin: 1rem 0;
}

img {
    max-width: 100%;
}

article {
    padding: $content-padding 0;
}
    article h1 {
        margin-bottom: 0.2rem;
    }

    .readmore {
        display: inline-block;
        padding: 0.4rem 0.8rem;
        margin-top: 0.7rem;
    }

/*
    Utilities
*/
.wider {
    @media (min-width: $content-max-width) {     // DESKTOP SIZE
        // Taken from https://stackoverflow.com/a/36530632/5539470
        width: 100vw;
        max-width: 700px;
        margin-left: 50%;
        padding: $content-padding;
        transform: translateX(-50%);
    }
}


/*
    Gallery
*/
.gallery {
    padding: 0 $content-padding;
}

.gallery a {
    display: block;
    height: 300px;
    padding: 0.5rem 0;
}

.gallery img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
    .thumbs {
        display: flex;
        flex-direction: column;
    }

@media (min-width: $content-max-width) {        // DESKTOP SIZE
    .gallery .big-image {
        height: 400px;
    }
    .thumbs {
        flex-direction: row;
        overflow-x: scroll;
    }
        .thumbs a {
            height: $gallery-thumb-size;
            flex: 1 0 $gallery-thumb-size;
            padding: 0.5rem;
        }
        .thumbs a:first-of-type {
            padding-left: 0;
        }
}


/*
    HEADER
*/
.site-header * {
    // Clear default styling for <li> and <a>
    text-decoration: none;
    list-style: none;
}
    .breadcrumbs {
        display: none;
    }

    // Menu toggling logic (using checkbox)
    #menu-btn:not(:checked) ~ .navbar {
        display: none;
    }
    .menu-btn-cb {
        display: none;      // Hide checkbox element
    }

    // Vertical navbar
    .navbar {
        width: 100%;
        text-align: center;
    }
        .navbar ul {
            display: flex;
            flex-direction: column;
            padding: 0;
        }
        .navbar a {
            display: block;     // Fill the container
            padding: 0 1rem;
        }

@media (min-width: 900px) {     // DESKTOP SIZE
    
    .site-header .wrapper {
        flex-wrap: nowrap;
    }
        .breadcrumbs {
            display: flex;
            flex: 1;
            padding: 0 1rem 0 2rem;
        }
        .menu-btn {
            display: none;
        }

        // Horizontal navbar
        #menu-btn:not(:checked) ~ .navbar {
            display: block;
        }
        .navbar {
            width: auto;
        }
            .navbar ul {
                flex-direction: row;
            }
}


/*
    FOOTER
*/
.site-footer {
    display: flex;
    // height: 80px;
    padding: $content-padding;

    justify-content: center;
    align-items: center;
}

.site-footer p {
    width: 600px;
    margin: 0;
    text-align: justify;
    
}

// .site-footer img {
//     width: 30px;
//     height: 30px;
// }

/*
    PROJECTS PAGE
*/
.site-content.projects {
    padding: 3rem $content-padding;
}

.project-tile h1 {
    margin: 0;
}

/*
    PROJECT PAGE
*/
.project > h1:first-child {
    margin: 3rem;
}
.project > article:nth-of-type(1) h1 {
    margin-top: 0;
}


/*
    BLOG PAGE
*/
// This CSS part is exceptionally implemented desktop-first (easier)
.site-content.blog {
    max-width: $content-wide-max-width;
    padding: 3rem $content-padding;
}

.bloglist {
    table-layout: fixed;
    border-collapse: collapse;
    text-align: left;
}

    $cell-padding-h: 0.8rem;
    .bloglist th {
        padding: 2rem $cell-padding-h;
    }

    .bloglist td {
        padding: 0.4rem $cell-padding-h;
    }



// MOBILE LAYOUT (collapsed table)
@media (max-width: $content-max-width) {
    .bloglist * {
        display: block; 
    }
    .bloglist thead {
        display: none;
    }

    .bloglist tr {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        padding: $content-padding 0;
    }

    // Change element order: date and category below title
    .bloglist tr :nth-child(1) {
        order: 2;
    }
    .bloglist tr :nth-child(2) {
        order: 1;
        width: 100%;
    }
    .bloglist tr :nth-child(3) {
        order: 3;
    }
}


/*
    ABOUT PAGE
*/
.about {
    max-width: $content-wide-max-width;
}

.top {
    display: flex;
    align-items: flex-start;
}

    .top > * {
        padding: 8rem 2rem;
        margin: 0;
    }

    .top img {
        width: 300px;
    }

    .top p {
        padding-left: 4rem;
    }

